--- a/style.css
+++ b/style.css
@@ -1,166 +1,355 @@
-
-header {
-	display: flex;
-	justify-content: center;
-}
-body {
-	padding: 20px 75px;
-}
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto&display=swap');
 
 * {
-	font-family: Arial, Helvetica, sans-serif;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
-ul li a, ul li {
-	text-decoration: none;
-	list-style-type: none;
+body {
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+}
+input, button {
+    border: none;
+    background: none;
+}
+button {
+    cursor: pointer;
 }
 
-.recipes-search, .recipes-filters {
-	margin: 20px 0;
+/* CLASS CUSTOM */
+.flex {
+    display: flex;
+}
+.no-value {
+    max-width: 50%;
+    text-align: center;
+    padding: 20px;
+    margin: auto;
+    font-size: 24px;
+    font-weight: 700;
+    color: #ED6454;
 }
 
-.recipes-search {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	position: relative;
+/* HEADER */
+.header-logo {
+    width: 270px;
+    margin: 42px auto 0px;
 }
-.recipes-search i {
-	width: 23px;
+
+/* MAIN */
+.container-large {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 1240px;
+    margin: 20px auto;
+}
+#search-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 69px;
+    background-color: #E7E7E7;
+    padding: 24px;
+    border-radius: 5px;
 }
 #search-input {
-	height: 55px;
-	font-size: 1em;
-	border-radius: .3em;
-	padding: 0 50px 0 20px;
-	background-color: rgba(128, 128, 128, 0.1);
-	border: none;
-	width: 100%;
+    width: 100%;
+    font-size: 18px;
 }
-#search-label {
-	position: absolute;
-	right: 15px;
+#search-input:focus {
+    outline: none;
 }
 
-.ingredients-tags, .utensils-tags, .appliances-tags, .recipes-tags {
-	padding: 0;
-	display: flex;
-	flex-wrap: wrap;
+/* TRI */
+#combobox-container {
+    margin: 25px 0; 
 }
-.tag-item {
-	margin-right: 15px;
-	padding: 10px 15px;
-	border-radius: .5em;
-	color: #ffff;
-	margin: 5px 7px;
+#combobox-container .flex {
+    gap : 20px
 }
-.tag-item i {
-	color: white;
+#combobox {
+    font-size: 18px;
 }
-.appliance-tag-item {
-	background-color: rgb(140, 219, 127);
-}
-.ingredient-tag-item {
-	background-color: rgb(21, 124, 209);
-}	
-.utensil-tag-item {
-	background-color: rgb(235, 83, 83);
-}
-
-.recipes-filters {
-	display: flex;
+.combobox-recipe .combobox-btn {
+    display: flex;  
+    justify-content: space-between;
+    align-items: center;
+    width: auto;
+    min-width: 170px;
+    height: 69px;
+    color: #fff;
+    border-radius: 5px;
+    padding: 24px 15px;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
 }
 
-.recipes-filter {
-	position: relative;
-	display: flex;
-	align-items: center;
-	position: relative;
-	margin-right: 15px;
-  width: 14%!important;
+/* BACKGROUND */
+#ingredients .combobox-btn,
+#choice-ingredients  {
+    background: #3282F7;
 }
-.recipes-filter-active {
-  width: 23%!important;
+#ingredients .combobox-btn:hover {
+    background: #2866c4;
 }
-.recipes-filter-active label i {
-  transform: rotate(-180deg);
+#appareils .combobox-btn,
+#choice-appareils {
+    background: #68D9A4;
 }
-.recipes-filter i {
-	width: 15px;
-	fill: #ffff;
+#appareils .combobox-btn:hover {
+    background: #50aa80;
+}
+#ustensiles .combobox-btn,
+#choice-ustensiles {
+    background-color: #ED6454;
+}
+#ustensiles .combobox-btn:hover {
+    background-color: #b84b3f;
 }
 
-.recipes-filter ::placeholder {
-	color: #ffff;
+.combobox-input {
+    font-size: 18px;
+    display: none;
 }
-.recipes-filter label {
-	position: absolute;
-	right: 13px;
+.combobox-input::placeholder {
+    color: rgba(255,255,255,0.80);
 }
-#ingredient-filter input {
-	background-color: rgb(21, 124, 209);
+.icone-arrow img {
+    transition: 0.3s linear;
 }
-#appliance-filter input {
-	background-color: rgb(140, 219, 127);
+
+/* ONCLICK BTN */
+.choice {
+    display: block;
+    width: 660px;
+    max-height: 360px;
+    position: absolute;
+    z-index: 1;
+    overflow: auto;
+    border-radius: 0 0 5px 5px;
 }
-#utensil-filter input {
-	background-color: rgb(235, 83, 83);
+.options {
+    display: none;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 5%;
+    padding-top: 10px;
+    padding-inline-start: 10px;
 }
-.filter-modal-active {
-	display: flex!important;
+.options li {
+    display: flex;
+    height: 45px;
+    color: rgba(255,255,255,0.95);
+    cursor: pointer;
 }
-.filter-input {
-  z-index: 1;
-	font-size: 1em;
-	padding: 15px 35px 15px 15px;
-  width: 100%;
-	height: 25px;
-	border: none;
-	border-radius: .2em;
-	color: #ffff;
+
+/* ACTIVE */
+#ingredients.active .icone-arrow img,
+#appareils.active .icone-arrow img,
+#ustensiles.active .icone-arrow img {
+    transform: rotate(180deg);
 }
-.filter-input:focus {
-	outline: none;
+#ingredients.active .combobox-btn,
+#appareils.active .combobox-btn,
+#ustensiles.active .combobox-btn {
+    width: 660px;
+    border-radius: 5px 5px 0 0;
+    padding: 5px 15px;
 }
-.filter-label {
-  z-index: 2;
+
+#ingredients.active .combobox-title,
+#appareils.active .combobox-title,
+#ustensiles.active .combobox-title {
+    display: none;
 }
-.filter-label i {
-  color: white;
+#ingredients.active .combobox-input,
+#appareils.active .combobox-input,
+#ustensiles.active .combobox-input {
+    display: block;
+    width: 95%;
+    height: 50px;
+    color: rgba(255,255,255,0.90);
+    outline: none;
 }
-.filter-modal {
-  z-index: 999;
-	position: absolute;
-	top: 53px;
-	width: 100%;
+
+#ingredients.active .options,
+#appareils.active .options,
+#ustensiles.active .options {
+    display: grid;
 }
-.filter-modal ul {
-	margin: 0;
-	padding: 0;
-	height: 400px;
-	display: none;
-	flex-direction: column;
-	flex-wrap: wrap;
-	align-items: flex-start;
-	justify-content: flex-start;
-	list-style-type: none;
-	overflow: hidden;
+
+/* TAG */
+#tag-result {
+    display: flex;
+    flex-wrap: wrap;
 }
-.filter-modal li {
-	margin: 6px 10px;
+.tag {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 110px;
+    height: 37px;
+    font-weight: 700;
+    font-size: 14px;
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    margin: 0px 10px 10px 0px;
+    cursor: pointer;
 }
-.filter-modal li a {
-	color: #ffff;
+
+/* CARD */
+#recipes-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 380px);
+    grid-gap: 50px;
+    justify-content: center;
+    margin: 50px auto;
 }
-.filter-modal li a:hover {
-	opacity: .85;
+.card-recipe {
+    max-width: 380px;
+    min-height: 364px;
+    border-radius: 5px;
+    overflow: hidden;
+    box-shadow: #00000045 0 5px 15px;
 }
-.utensil-filter-modal {
-	background-color: rgb(235, 83, 83);
+/* image */
+.img-recipe {
+    width: 100%;
+    height: 178px;
+    object-fit: cover;
 }
-.appliance-filter-modal {
-	background-color: rgb(140, 219, 127);
+/* Block info  */
+.info-recipe {
+    padding: 20px;
 }
-.ingredient-filter-modal {
-	background-color: rgb(21, 124, 209);
+/* titre et timer */
+.card-header {
+    justify-content: space-between;
+}
+.title-recipe {
+    width: 70%;
+    -webkit-line-clamp: 1;
+}
+.card-timer {
+    align-items: center;
+}
+.card-timer img {
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
+}
+.timer-icon {
+    width: 20px;
+    height: 20px;
+}
+/* Description et liste */
+.content-card {
+    margin-top: 20px;
+}
+.list-ingredients {
+    width: 50%;
+    list-style-type: none;
+    padding: 0;
+}
+.list-ingredients li {
+    font-size: 12px;
+    font-weight: 700;
+}
+.list-ingredients span{
+    font-weight: 400;
+}
+.description-recipe {
+    width: 50%;
+    font-family: 'Roboto', sans-serif;
+    -webkit-line-clamp: 7;
+}
+/* Autres */
+.title-recipe, 
+.timer-recipe{
+    font-size: 18px;
+}
+.timer-recipe,
+.ingredients-recipe  {
+    font-weight: 700;
+}
+.timer-recipe {
+    color: #68D9A4;
+}
+.description-recipe, 
+.title-recipe {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+/* RESPONSIVE */
+@media screen and (min-width : 1600px) {
+    #recipes-container {
+        margin: 50px 100px;
+    }
+}
+
+@media screen and (max-width : 1300px) {
+    body {
+        padding : 0 20px;
+    }
+}
+
+@media screen and (max-width : 600px) {
+    #combobox {
+        flex-direction: column;
+        align-self: center;
+    }
+    #combobox > * {
+        width: 100%;
+    }
+    #ingredients.active .combobox-btn, 
+    #appareils.active .combobox-btn, 
+    #ustensiles.active .combobox-btn {
+        width: 100%;
+    }
+    .choice {
+        position: relative;
+        width: 100%;
+
+    }
+
+    /* CARD */
+    #recipes-container {
+        display: grid;
+        grid-template-columns: auto;
+        grid-gap: 20px;
+        justify-content: center;
+        margin: auto;
+    }
+}
+@media screen and (max-width : 450px) {
+    .info-recipe {
+        padding: 15px;
+    }
+    .card-header,
+    .content-card  {
+        justify-content: space-between;
+        flex-direction: column;
+    }
+    .title-recipe, 
+    .description-recipe {
+        width: 100%;
+        
+    }
+    .title-recipe {
+        margin-top: 0;
+    }
+    .card-timer,
+    .description-recipe {
+        margin-top: 10px;
+    }
+    .description-recipe {
+        -webkit-line-clamp: 3;
+    }
 }
